--- a/main.html
+++ b/main.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Accessible Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  
+  <nav role="navigation" aria-label="Main Navigation">
+    <ul role="list">
+      <li role="listitem"><a href="#about">About Me</a></li>
+      <li role="listitem"><a href="#projects">Projects</a></li>
+      <li role="listitem"><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 
+  
+  <header>
+    <h1 role="heading" aria-level="1">John Doe's Portfolio</h1>
+  </header>
+
+  
+  <section id="about">
+    <img src="profile.jpg" alt="John Doe's profile picture" role="img">
+    <p>A passionate web developer with a focus on creating accessible and user-friendly websites.</p>
+  </section>
+
+  
+  <section id="projects">
+    <h2 role="heading" aria-level="2">Projects</h2>
+    <ul role="list">
+      <li role="listitem">Project 1: Accessible Web Design</li>
+      <li role="listitem">Project 2: E-commerce Platform</li>
+      <li role="listitem">Project 3: Real-Time Chat Application</li>
+    </ul>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2 role="heading" aria-level="2">Contact Me</h2>
+    <p>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></p>
+  </section>
 </body>
-
 </html>
